# World2Filter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: benchmark_suite.yaml  default.yaml  distracting_cs.yaml  dreamer_v3.yaml
scripts/: preprocess_masks.py  train_dreamer.py  train_world2filter.py
src/: __init__.py
src/agents/: __init__.py  dreamer_agent.py  world2filter_agent.py
src/data/: __init__.py  episode_dataset.py  replay_buffer.py
src/envs/: __init__.py  color_grid_utils.py  distracting_cs.py  embodied_wrapper.py  natural_video_source.py  parallel.py  rlbench_env.py  wrappers.py
src/models/: __init__.py
src/models/dreamer_v3/: __init__.py  actor_critic.py  decoder.py  encoder.py  networks.py  rssm.py  world_model.py
src/models/segmentation/: __init__.py  mask_processor.py  sam3_wrapper.py
src/models/world2filter/: __init__.py  fg_bg_decoder.py  fg_bg_world_model.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  visualization.py
